syntax = "proto3";

package calculator;

option java_package = "com.proto.calculator";
option java_multiple_files = true;

message SumRequest {
  int32 first_number = 1;
  int32 last_number = 2;
}

message SumResponse {
  int32 result = 1;
}

message PrimeNumberDecompositionRequest {
  int32 number = 1;
}

message PrimeNumberDecompositionResponse {
  int32 number = 1;
}

service CalculatorService {
  //Unary
  rpc Summation(SumRequest) returns (SumResponse) {};

  // Server Streaming
  rpc PrimeManyTimes(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};
}